<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Video Client</string>
    <string name="enable_p2p_button">webrtc连接</string>
    <string name="discover_peers_button">搜索周围设备</string>
    <string name="check_wifi">查看网络质量</string>
    <string name="edit_ip">输入ip</string>
    <string name="video_quality">录制视频质量</string>




    <string name="connect_peer_button">连接</string>
    <string name="disconnect_peer_button">断开视频</string>
    <string name="get_continue_button">继续播放</string>
    <string name="get_stop_button">暂停播放</string>
    <string name="get_turn_button">turn</string>




    <string name="empty"></string>

    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
</resources>
