<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/atn_direct_enable"
        android:icon="@drawable/ic_action_on_off"
        android:title="@string/enable_p2p_button"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/atn_direct_discover"
        android:icon="@drawable/ic_action_discover"
        android:title="@string/discover_peers_button"
        android:showAsAction="always|withText" />

    <item
        android:id="@+id/atn_wifi_check"
        android:icon="@drawable/ic_wifi_white_48dp"
        android:title="@string/check_wifi"
        android:showAsAction="always|withText" />
    <item
        android:id="@+id/atn_socket"
        android:icon="@drawable/ic_cast_connected_white_48dp"
        android:title="@string/edit_ip"
        android:showAsAction="always" />
    <item
        android:id="@+id/video_quality"
        android:icon="@drawable/ic_videocam_white_48dp"
        android:title="@string/video_quality"
        android:showAsAction="always" />

</menu>
